--- a/primary.html
+++ b/primary.html
@@ -165,7 +165,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         <li>International Studies (which includes History and Geography)</li>
                         <li>Art and Design Technology</li>
                         <li>ICT</li>
-                        <li>Physical Education (P.E)</li>
+                        <li>Physical Education (PE)</li>
                         <li>Bahasa Indonesia </li>
                         <li>Dance</li>
                         <li>Music</li>
