+Full stop in a sentence.

--- a/lunches.html
+++ b/lunches.html
@@ -140,7 +140,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         <br>
                         <br>JCS is an environmentally minded school and we encourage families to minimise plastic wrapping and disposable containers for snacks and lunch. 
                             <br><Br>
-                 Students are required to bring reusable drink bottles for drinking water at school 
+                 Students are required to bring reusable drink bottles for drinking water at school. 
                     </span>
 
 
