--- a/asa.html
+++ b/asa.html
@@ -121,7 +121,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <!-- single -->
     <div class="single about">
         <div class="container">
-            <h3 class="w3ls-title">AFTER SCHOOL ACTIVITIES (ASA) </h3>
+            <h3 class="w3ls-title">After School Activities (ASA) </h3>
             <div class="col-md-12 w3ls_single_left">
                 <div class="w3ls_single_left_grid">
                     <div class="clearfix"> </div>
