--- a/bahasaIndonesia.html
+++ b/bahasaIndonesia.html
@@ -40,19 +40,19 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 <body>
 
-    <!-- header -->
-    <div class="header-w3layoutstop">
+ <!-- header -->
+     <div class="header-w3layoutstop">
         <div class="container">
             <!-- navigation -->
             <div class="top-nav w3-agiletop">
                 <div class="container">
                     <div class="navbar-header w3llogo">
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-							<span class="sr-only">Toggle navigation</span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-						</button>
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
                     </div>
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -61,7 +61,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         </div>
                         <div class="w3menu navbar-right">
                             <ul class="nav navbar">
-                                <!--							<li><a href="index.html" class="active">About</a></li>-->
+                            
                                 <li><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span data-letters="Pages">About</span><span class="caret"></span></a>
                                     <ul class="dropdown-menu">
                                         <li><a href="welcome.html">Welcome</a></li>
@@ -72,14 +72,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                         <li><a href="recruitment.html">Recruitment</a></li>
                                     </ul>
                                 </li>
-                                <!--							<li><a href="about.html">Curriculum</a></li> -->
+                                <!--                            <li><a href="about.html">Curriculum</a></li> -->
                                 <li><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">         <span data-letters="Pages">Curriculum</span><span class="caret"></span></a>
                                     <ul class="dropdown-menu">
                                         <li><a href="curriculum.html">Our Curriculum</a></li>
                                         <li><a href="eyfs.html">EYFS</a></li>
                                         <li><a href="primary.html">Primary</a></li>
                                         <li><a href="secondary.html">Secondary</a></li>
-                                        <li><a href="bahasaIndonesia.html">Bahasa Indonesia</a></li>
+                                        <li><a href="bahasaIndonesia.php">Indonesian Language</a></li>
                                         <li><a href="pastoral.html">Pastoral Care</a></li>
                                     </ul>
                                 </li>
@@ -121,7 +121,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <!-- single -->
     <div class="single about">
         <div class="container">
-            <h3 class="w3ls-title">Bahasa Indonesia</h3>
+            <h3 class="w3ls-title">Indonesian Language</h3>
             <div class="col-md-12 w3ls_single_left">
                 <div class="w3ls_single_left_grid">
                     <div class="clearfix"> </div>
@@ -129,7 +129,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <div class="center">
                     <img src="images/david.jpg" alt=" " class="center" />
                     <br>
-                    <h3>Indonesian language</h3> <br>The benefits of an international education are well documented. Our curriculum is taught in English and the subjects our children follow lead to internationally recognised standards. JCS is a community school and firmly rooted in Jogjakarta. As such, we also want our children to celebrate the Indonesian language and culture.
+                    <br>The benefits of an international education are well documented. Our curriculum is taught in English and the subjects our children follow lead to internationally recognised standards. JCS is a community school and firmly rooted in Jogjakarta. As such, we also want our children to celebrate the Indonesian language and culture.
                     <br><br> Here at JCS we offer all our students the opportunity to learn Indonesian as taught by our team teachers whose first language is Indonesian. They tailor lessons to suit the levels of ability within the classroom. The teaching of Indonesian begins in our Primary phase and continues throughout the student’s time at school. Our older students are able to sit the Cambridge examinations in either First or Second Language Indonesian.
 
                     <br><br> On top of our our language programme we promote Indonesian manners and traditions and explore local crafts and customs. One of our annual events is our Indonesia Week where children learn styles of art, study house building, craft work, local history and learn traditional songs and dance.
