EYFS Fixed link

--- a/eyfs.html
+++ b/eyfs.html
@@ -161,7 +161,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <br>
                     <span>At JCS the EYFS curriculum is followed throughout Pre-school and Reception.  It is intended that the programme will create independent, motivated and engaged learners who will have a strong, solid foundation on which to build from Year 1 upward.</span>
                     <br><br>
-                    <span>You can access the EYFS curriculum (from 0-5 years old) official document via this link: <a href='http://www.foundationyears.org.uk/' >EYFS Curriculum</a> </span>
+                    <span>You can access the EYFS curriculum (from 0-5 years old) official document via this link: <a href='https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/669079/Early_years_foundation_stage_profile_2018_handbook.pdf' >EYFS Curriculum</a> </span>
 
 
                     <div class="clearfix"> </div>
