--- a/admissions.html
+++ b/admissions.html
@@ -149,7 +149,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                             <br><br>
                             <strong>Pre-Registration</strong>
                             <br> JCS has an academically non-selective enrolment policy. However, we use the following criteria before enrolment to ensure that we meet the needs of all students of each class. Please consider these criteria before beginning the registration process.
-                            <br> This range of subjects gives the students a broad understanding and knowledge and enables students to develop independent learning, along with time and organisation management, inquiry and reflective skills.
                             <br><br>
                             <strong>Year Group Eligibility</strong>
                             <br><br>
@@ -191,7 +190,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                             <h3>Registration</h3>
                             <br>
                             
-                            <strong>Step 1:</strong> <br> On being offered a place at JCS, parents will be contacted by the Office Manager. At this stage parents will be asked to complete and submit the school registration form, along with the <strong>one time registration payment of 3,500,000 IDR</strong>per child in order to secure the place. <strong>The registration fee is non-refundable</strong>. 
+                            <strong>Step 1:</strong> <br> On being offered a place at JCS, parents will be contacted by the Office Manager. At this stage parents will be asked to complete and submit the school registration form, along with the <strong>one time registration payment of 3,500,000 IDR</strong> per child in order to secure the place. <strong>The registration fee is non-refundable</strong>. 
                             <br> <br>
 
                             <strong>Step 2:</strong> <br> Once all the registration documentation has been received and signed by both parties, the Office Manager will issue the start date, the payment invoice and any other relevant information required for your child to join JCS.
@@ -210,7 +209,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <li>Tuition fees can be paid in instalments or paid in full at the beginning of the year. Please see the Fee Schedule for details.</li>
                                 <li>For children enrolling after the start of Term 1, fees will be calculated pro-rata for the portion of the school year they are in attendance. This will be invoiced when your child joins the school.</li>
                                 <li>Baseline test fees (administered at the beginning of each key stage) are an additional cost, separate from school fees (applies to Key Stages 2, 3 and 4). Parents will be notified in advance of the tests taking place.</li>
-                                <li>Externally set examinations such as IGCSE and A levels incur examination fees. These are an additional cost, separate from school fees and are to be paid by the student prior to the examinations being taken.</li>
+                                <li>Externally set examinations such as IGCSE and A levels incur examination fees. These are an additional cost, separate from school fees and are to be paid prior to the examinations being taken.</li>
                             </ul>
                             <br> Some parents may wish to make an advance payment on tuition fees for the following academic year. Please note, if an advance payment is made before tuition fees have been set for the new academic, the school will request the difference to be paid.
                             <br><br>
@@ -244,7 +243,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                             
                             <strong>DETERMINING TUITION FEES</strong>
 
-                            <br>JCS has no external investment or endowment fund; it is funded entirely from tuition fees. JCS is a non-profit entity; all income is used to provide a quality learning experience and the development of the school facilities. Non-payment or late payment of fees causes significant operational difficulties and compromises the quality of service.
+                            <br>JCS has no external investment or endowment fund; it is funded entirely from tuition fees. JCS is a non-profit entity: all income is used to provide a quality learning experience and the development of the school facilities. Non-payment or late payment of fees causes significant operational difficulties and compromises the quality of service.
                             <br><br>
                             <strong>RESERVATION</strong>
 
