Fixed Secondary and Tuition

--- a/secondary.html
+++ b/secondary.html
@@ -158,7 +158,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <li>Geography</li>
                                 <li>ICT</li>
                                 <li>Art</li>
-                                <li>Bahasa Indonesia</li>
+                                <li>Indonesian Language</li>
                                 <li>PE</li>
                                 <li>Music and Dance </li>
                             </ul>
@@ -173,7 +173,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         <br>
                         Students can elect to take IGCSEs in the following subjects:
                             <ul>
-                                <li>English First lenguage </li>
+                                <li>English First Language </li>
                                 <li>English as a Second Language</li>
                                  <li>Mathematics</li>
                                 <li>Physics</li>
@@ -189,9 +189,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <br><br>
                  Key Stage 4 is a significant and influential stage of a student’s academic journey as students begin to make personal choices about the subjects they wish to study at A Level.  Students learn to become more independent and start to develop a more clearly defined sense of direction for the future.  Information and guidance about A Level options and careers becomes a key focus both academically and pastorally.  Subject teachers and tutors encourage students to explore and discuss choices and opportunities open to them, whilst taking into consideration their personal strengths and ambitions.
                                 
-                   <br> <br> 
-                       While academic success at IGCSE level is of paramount importance, the Key Stage 4 experience also focuses on developing the whole student and so particular emphasis is placed on the enrichment and Personal, Social, Health & Economic Education (PSHE) programmes, tailored to suit the needs of students at this stage of their life. Class teachers work closely with students both mentoring them for the IGCSE programme and also offering guidance of future option pathways. 
-
                         <br>   
                         <br>
                         <img src="images/Secondary_3.jpg" alt=" " class="center" />
