--- a/tuition.html
+++ b/tuition.html
@@ -121,7 +121,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <!-- single -->
     <div class="single about">
         <div class="container">
-            <h3 class="w3ls-title">Tuiton Fees</h3>
+            <h3 class="w3ls-title">Tuition Fees</h3>
             <div class="col-md-12 w3ls_single_left">
                 <div class="w3ls_single_left_grid">
                     <div class="clearfix"> </div>
@@ -148,14 +148,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                             <br>
                             <h4> Option B: Instalment payment (note: Instalment payment incurs 5% interest) </h4>
                             <br>
-        <img src="images/table_3_fee.png" alt=" " class="center" />
-                 <br>
-                 All amounts above are denoted in Indonesian Rupiah to comply with comply with Regulation UU No 7 Year 2011.
-Parents will be invoiced in IDR and the school will accept payment in IDR.
-<br><br>
-<strong>Note:</strong><br><br>
+                                    <img src="images/table_3_fee.png" alt=" " class="center" />
+                                             <br>
+                                             All amounts above are denoted in Indonesian Rupiah to comply with comply with Regulation UU No 7 Year 2011.
+                            Parents will be invoiced in IDR and the school will accept payment in IDR.
+                            <br><br>
+                            <strong>Note:</strong><br>
 
-        <ul>
+                                    <ul>
                                 <li>Forsecurity reasonsthe school does not accept paymentin cash.</li>
                                 <li>Families with more than2 children enrolled at JCS qualify fora discount of 6%on the tuitionof the 3rdchild
                                     and 10% on the tuition ofthe 4th child.</li>
