Pastoral and PTA

--- a/pastoral.html
+++ b/pastoral.html
@@ -130,12 +130,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <div class="w3ls_single_left_grid1">
                     <img src="images/pastoral_paco.jpg" alt=" " class="center" />
                     <div class="center">
-                        <p>
-                            Pastoral care plays a vital role in the social and emotional development or our children and it permeates all areas of school life at JCS.
-                            <br> As a school we facilitate the development of all members of our school community, fostering relationships based on respect. We engender a sense of belonging to our school community where each individual is valued and her/his uniqueness is recognised. JCS promotes a school community that is caring and positive and as such, we believe pastoral care is the responsibility of the entire school community.
+                            <br>
+                            Pastoral care plays a vital role in the social and emotional development of our children and it permeates all areas of school life at JCS.
+                            <br><br> As a school we facilitate the development of all members of our school community, fostering relationships based on respect. We engender a sense of belonging to our school community where each individual is valued and her/his uniqueness is recognised.
+                             JCS promotes a school community that is caring and positive and as such, we believe pastoral care is the responsibility of the entire school community.
 
-                            <br> JCS strives to ensure that every member of the school community will:
-                        </p>
+                            <br><br> JCS strives to ensure that every member of the school community will:
                         <ul>
                             <li>Feel valued and cared for</li>
                             <li>Be developed to his/her full potential – spiritually, morally, intellectually, physically, socially, personally.
@@ -145,12 +145,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 
                         <br>
-                        <p>
                             <img src="images/pastoral_2.jpg" alt=" " class="center" />
 
-                            <br> The school adopts a positive and inclusive approach to managing behaviour, adopting a range of strategies to work with the students. We help them develop skills in making appropriate choices and in realising potential consequences. We believe it is important that children understand they have rights and responsibilities and aim to equip them to act upon these. We set high expectations for staff and children alike and we expect all adults and older children to act as good role models in supporting younger students in JCS as part of our buddy and mentoring systems..
+                            <br> The school adopts a positive and inclusive approach to managing behaviour, adopting a range of strategies to work with the students. We help them develop skills in making appropriate choices and in realising potential consequences. We believe it is important that children understand they have rights and responsibilities and aim to equip them to act upon these. We set high expectations for staff and children alike and we expect all adults and older children to act as good role models in supporting younger students in JCS as part of our buddy and mentoring systems.
                             <br><br> As a whole school we put great emphasis on the importance of interacting with others in respectful ways, irrespective of cultural background, with thoughtful speaking, actions and building relationships. We strive to remain true to our core values, nurturing the social and emotional development of all our JCS children.
-                        </p>
                     </div>
                     <div class="clearfix"> </div>
                 </div>
