--- a/pta.html
+++ b/pta.html
@@ -127,28 +127,28 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <div class="clearfix"> </div>
                 </div>
                 <div class="w3ls_single_left_grid1">
+                    <div class="center">
                     <img src="images/PTA%201.jpg" alt=" " class="img-responsive" />
-                    <p>
-                        <span><strong>   Parent Teacher Association (PTA)</strong></span> At JCS our PTA is a vital element in the fabric of our school community. Our PTA is guided in all its undertakings by the school’s vision and mission statement. It promotes a partnership between parents and the school, encouraging a joint responsibility to work closely to develop and extend the relationship between staff, parents and others associated with the school.
-                        <br><br> On joining JCS all parents and carers automatically become part of our PTA. Parents are encouraged to become active members of our PTA, supporting our school activities and helping us realise some of wider goals. As a community we seek the support of all our parents and families; as a PTA member you are able to help guide this.
+                    <br>
+                        <strong>   Parent Teacher Association (PTA)</strong> 
+                        <br>At JCS our PTA is a vital element in the fabric of our school community. Our PTA is guided in all its undertakings by the school’s vision and mission statement. It promotes a partnership between parents and the school, encouraging a joint responsibility to work closely to develop and extend the relationship between staff, parents and others associated with the school.
+                        <br><br> On joining JCS all parents and carers automatically become part of our PTA. Parents are encouraged to become active members of our PTA, supporting our school activities and helping us realise some of the school's wider goals. As a community we seek the support of all our parents and families; as a PTA member you are able to help guide this.
                         <br><br> JCS has a PTA Executive Committee. This is a small team of parents and staff who have been elected by the parents. This committee coordinates and oversees the calendar of events, fund-raising activities and communication between the PTA, home and school. The committee looks to parents to offer support in running these activities.
                         <br><br>
                         <img src="images/pta_4.png" alt=" " class="img-responsive" />
                         <br> The role of our PTA is to:
-                    </p>
-                    <ul>
+                          <ul>
                         <li>Stimulate an active interest in the life of our school.</li>
                         <li>Foster a spirit of community amongst parents, staff and friends of our school.</li>
                         <li>Promote cooperation between parents, staff and students of our school.</li>
-                        <li>Be a vehicle for fundraising; supporting, attending and volunteering at school events to further develop the resources, facilities and new capital expenditure projects here at JCS</li>
+                        <li>Be a vehicle for fundraising: Supporting, attending and volunteering at school events to further develop the resources, facilities and new capital expenditure projects here at JCS</li>
                         <li>Support new families.</li>
                     </ul>
-                    <p>
                         Our PTA is currently raising funds for the development of the school’s multipurpose court. The project will be completed in two phases. The first phase which is to prepare the base for the court has now been completed. Our next phase which is still in the planning stage will see the construction of a roof over the court so it will become an all year multi-purpose outdoor space. This could not have been achieved with our parents’ continued support and enthusiasm.
                         <br><br>
                         <img src="images/PTA%202.jpg" alt=" " class="img-responsive" />
-                    </p>
                     <div class="clearfix"> </div>
+                </div>
                 </div>
             </div>
             <div class="clearfix"> </div>
