--- a/governance.html
+++ b/governance.html
@@ -138,7 +138,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     Our YSS Trustees and Board members work with the teaching staff to support the 5-year strategic plan. Since our doors opened to students and through the support of everyone within the JCS community, school numbers have grown and in January 2017, the school moved to a new purpose-built site in the north of the city. The school is set in its own grounds with spacious green land for further development. 
                             <br>
                      <br>
-                    The strategic plan is built on three pillars: Excellence in Education "Growth and Sustainability" and Community Engagement and Support. Our child-centred approach to education ensures each child is treated as an individual, fostering a positive approach to lifelong learning, where children are encouraged to embrace new experiences and developing their potential. 
+                    The strategic plan is built on three pillars: Excellence in Education, Growth and Sustainability and Community Engagement and Support. Our child-centred approach to education ensures each child is treated as an individual, fostering a positive approach to lifelong learning, where children are encouraged to embrace new experiences and developing their potential. 
                             <br>
                      <br>
                     As a school we aspire to live an environmentally mindful life with a low carbon footprint. The design of the new site was given careful consideration to its aspect, the materials used and to the school’s place in the local community; all without compromising safety and security. 
