--- a/vision.html
+++ b/vision.html
@@ -128,9 +128,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 </div>
                 <div class="w3ls_single_left_grid1">
                          <div class="center">
-                    <img src="images/circles/Primary.jpg" alt=" " class="img-responsive" />
+                    <img src="images/vision_pic.jpg" alt=" " class="img-responsive" />
                     <br><br>
-                        <strong>JCS - Vision and Our Mission</strong><br><br>At JCS we have a strong vision for the school, its students, parents and staff. This is supported by our mission statement and core values which form the very heart of our community.
+                        <strong>JCS - Vision and Mission</strong><br><br>At JCS we have a strong vision for the school, its students, parents and staff. This is supported by our mission statement and core values which form the very heart of our community.
                         <br><br>
                         <strong>Our Vision </strong><br><br>
                         To provide a vibrant learning community that draws on quality international and local resources to promote a positive approach to lifelong learning, encouraging children to embrace new experiences and develop their potential based on our core values.
@@ -158,7 +158,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                             </ul>
 
                     <br>
-                    <img src="images/Mission%202.jpg" alt=" " class="img-responsive" />
+                    <img src="images/vision_pic.jpg" alt=" " class="img-responsive" />
                 </div>
                     <div class="clearfix"> </div>
                 </div>
