--- a/index.html
+++ b/index.html
@@ -76,10 +76,16 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						</button>
                     </div>
                     <!-- Collect the nav links, forms, and other content for toggling -->
-                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <div class="hdr-w3left navbar-left">
-                            <a href="index.html"><img src=images/logo_jcs_helv.png></a>
+                            <a href="index.html"><img src=images/logo_jcs_helv.png></a>        
                         </div>
+
+                        <div class="hdr-mobile">
+                            <a href="index.html"><img src=images/logo_mobile.png></a>
+                        </div>
+
+                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
                         <div class="w3menu navbar-right">
                             <ul class="nav navbar">
                                 <!--							<li><a href="index.html" class="active">About</a></li>-->
