--- a/admissions.html
+++ b/admissions.html
@@ -127,8 +127,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <div class="clearfix"> </div>
                 </div>
                 <div class="w3ls_single_left_grid1">
-                    <img src="images/admissions.jpg" alt=" " class="center" />
                     <div class="center">
+                    <img src="images/admissions.jpg" alt=" " class="center" />
                         <p>
                             <h3>JCS Admissions and Tuition Fees Policy and Procedures</h3>
                             <br>
@@ -136,7 +136,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         <br>  <br>
                                 <h3>Making initial enquiries</h3>
                         <br>
-                                For general enquiries regarding the school and enrolment, please contact our Office Manager at <a href=officemanager@jogjacommunityschool.org>officemanager@jogjacommunityschool.org</a> or call us at +62 (0) 811 2576 164. 
+                                For general enquiries regarding the school and enrolment, please contact our Office Manager at <a href=mailto:officemanager@jogjacommunityschool.org>officemanager@jogjacommunityschool.org</a> or call us at +62 (0) 811 2576 164. 
  
 								 Parents can also register their child for a 3 day trial at the school to experience first hand what JCS has to offer. This can be arranged by making an appointment with the office, completing a short application form and agreeing on the trial days. The trial is a no-obligation, free of charge opportunity to experience our school.
 
@@ -152,7 +152,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                             <br><br>
                             <strong>Year Group Eligibility</strong>
                             <br><br>
-                            <img src="images/table_admissions.png" alt=" " class="center" />
+                            <img src="images/table_admissions_new.png" alt=" " class="center" height="600px" />
                             <br><br>
                             <strong>Language</strong>
 
@@ -190,7 +190,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                             <h3>Registration</h3>
                             <br>
                             
-                            <strong>Step 1:</strong> <br> On being offered a place at JCS, parents will be contacted by the Office Manager. At this stage parents will be asked to complete and submit the school registration form, along with the <strong>one time registration payment of 3,500,000 IDR</strong> per child in order to secure the place. <strong>The registration fee is non-refundable</strong>. 
+                            <strong>Step 1:</strong> <br> On being offered a place at JCS, parents will be contacted by the Office Manager. At this stage parents will be asked to complete and submit the school registration form, along with the one time registration payment of 3,500,000 IDR per child in order to secure the place. The registration fee is non-refundable. 
                             <br> <br>
 
                             <strong>Step 2:</strong> <br> Once all the registration documentation has been received and signed by both parties, the Office Manager will issue the start date, the payment invoice and any other relevant information required for your child to join JCS.
