--- a/times.html
+++ b/times.html
@@ -121,7 +121,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <!-- single -->
     <div class="single about">
         <div class="container">
-            <h3 class="w3ls-title">Time of the day</h3>
+            <h3 class="w3ls-title">Times of the School Day</h3>
             <div class="col-md-12 w3ls_single_left">
                 <div class="w3ls_single_left_grid">
                     <div class="clearfix"> </div>
@@ -144,7 +144,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 All classes have a daily timetable that will be available for students and parents to view in each classroom. The general daily schedule at JCS:
                                 <br><br>
                                  <img src="images/timestable.png" alt=" " class="center" />
-                                
+
+                                 <br>
+                                We recognise that our youngest children in EYFS and Lower Primary benefit from additional time at snack and lunch. This will be built into individual class timetables to ensure they have sufficient time to eat, play and prepare for class activities.
                                 
                     </span>
                         </div>
