--- a/tuition.html
+++ b/tuition.html
@@ -156,11 +156,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                             <strong>Note:</strong><br>
 
                                     <ul>
-                                <li>Forsecurity reasonsthe school does not accept paymentin cash.</li>
-                                <li>Families with more than2 children enrolled at JCS qualify fora discount of 6%on the tuitionof the 3rdchild
-                                    and 10% on the tuition ofthe 4th child.</li>
-                                <li>Late payment lumpsum or instalment ̶ please refer to the Parent and Student Handbook or the
-                                Admissions Policy.</li>
+                                <li>For security reasons the school does not accept payment in cash.</li>
+                                <li>Families with more than 2 children enrolled at JCS qualify for a discount of 6% on the tuition of the 3rd child and 10% on the tuition of the 4th child.</li>
+                                <li>Late payment lump sum or installment  ̶ please refer to the Parent and Student Handbook or the Admissions Policy.</li>
                             </ul>
 
                         </div>
