--- a/asa.html
+++ b/asa.html
@@ -130,7 +130,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <img src="images/ASA.jpg" alt=" " class="center" />
                     <p>
                         <div class="center">
-                            <h3>AFTER SCHOOL ACTIVITIES (ASA)
+                            <h3>After School Activities (ASA)
                             </h3>
                             <br>
                             <span>The day does not end when the final bell sounds. Instead, we have developed a dynamic and varied after school programme for students to explore other talents. ASA are offered as a partnership between parents, the school and the Jogjakarta community, including sports, culture, arts and other activities that support the intellectual, physical and social development of students. Participation in ASA is optional and fees are charged to cover the costs. Students from outside of the JCS community are welcome to participate in our ASA and should apply to the school office for further details.
