+Style for Ipad and Iphone

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         </a>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-4 col-xs-6 services-w3lsgrids">
+                <div class="col-md-4 col-sm-4 col-xs-8 services-w3lsgrids">
                     <div class="services-w3text srvs-w3text3">
                         <!--						<i class="fa fa-credit-card" aria-hidden="true"></i>-->
                         <a href="secondary.html">
@@ -254,7 +254,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         <div class="news-w3imgtext">
                             <!--							<h5 class="w3-agilep">Nov 4, 2016</h5>-->
                             <h4><a href="events.html">Special Events</a></h4>
-                            <p>Events and activities enriching our children's learning</p>
+                            <p>Events and activities enriching our children</p>
                             <!--							<a class="w3-agilebtn" href="single.html"><span>Read More</span></a> -->
                         </div>
                     </div>
