+Fixed laptop index.html

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         <div class="news-w3imgtext">
                             <!--							<h5 class="w3-agilep">Nov 4, 2016</h5>-->
                             <h4><a href="events.html">Special Events</a></h4>
-                            <p>Events and activities enriching our children</p>
+                            <p>Events and activities enriching <br>our children</p>
                             <!--							<a class="w3-agilebtn" href="single.html"><span>Read More</span></a> -->
                         </div>
                     </div>
