--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             <!-- navigation -->
             <div class="top-nav w3-agiletop">
                 <div class="container">
+
+
                     <div class="navbar-header w3llogo">
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
 							<span class="sr-only">Toggle navigation</span>
@@ -77,13 +79,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     </div>
                     <!-- Collect the nav links, forms, and other content for toggling -->
                         <div class="hdr-w3left navbar-left">
-                            <a href="index.html"><img src=images/logo_jcs_helv.png></a>        
-                        </div>
-
-                        <div class="hdr-mobile">
-                            <a href="index.html"><img src=images/logo_mobile.png></a>
-                        </div>
-
+                            <a href="index.html"><img src=images/logo_jcs_helv.png></a>    
+                        </div>               
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
                         <div class="w3menu navbar-right">
@@ -197,9 +194,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         <div class="container">
             <h3 class="w3ls-title">Our Programmes of Study</h3>
             <div class="services-agileinfo">
+                  <a href= "eyfs.html">
                 <div class="col-md-4 col-sm-4 col-xs-8 services-w3lsgrids">
+                      <a href= "eyfs.html">
                     <div class="services-w3text">
-                        <!--						<i class="fa fa-cutlery" aria-hidden="true"></i> -->
                         <a href="eyfs.html">
                             <h5>
                                 EYFS
@@ -207,22 +205,28 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         </a>
                     </div>
                 </div>
+                </a>
+                <a href= "primary.html">
                 <div class="col-md-4 col-sm-4 col-xs-8 services-w3lsgrids">
+                            <a href= "primary.html">
                     <div class="services-w3text srvs-w3text2">
-                        <!--						<i class="fa fa-map" aria-hidden="true"></i> -->
                         <a href="primary.html">
                             <h5>Primary</h5>
                         </a>
                     </div>
+                </a>
                 </div>
+                </a>
+                <a href= "secondary.html">
                 <div class="col-md-4 col-sm-4 col-xs-8 services-w3lsgrids">
+                    <a href= "secondary.html">
                     <div class="services-w3text srvs-w3text3">
                         <!--						<i class="fa fa-credit-card" aria-hidden="true"></i>-->
-                        <a href="secondary.html">
                             <h5>Secondary</h5>
-                        </a>
                     </div>
+                    </a>
                 </div>
+                  </a>
                 <div class="clearfix"> </div>
             </div>
         </div>
