--- a/admissions.html
+++ b/admissions.html
@@ -152,7 +152,44 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                             <br><br>
                             <strong>Year Group Eligibility</strong>
                             <br><br>
-                            <img src="images/table_admissions_new.png" alt=" " class="center" height="600px" />
+                            <!-- <img src="images/table_admissions_new.png" alt=" " class="center" height="600px" /> -->
+                            <div class="table_mine">
+                              <table class="myTable">
+                                <thead>
+                                  <tr class="w3-red">
+                                    <th>Age on the 
+                                    First Day of 
+                                    School</th>
+                                    <th>Year Group</th>
+                                    <th>Key Stage</th>
+                                  </tr>
+                                </thead>
+                                <tr>
+                                  <td>3</td>
+                                  <td>Pre-school</td>
+                                  <td>Foundation Stage</td>
+                                </tr>
+                                <tr>
+                                  <td>4</td>
+                                   <td>Pre-school</td>
+                                  <td>Foundation Stage</td>
+                                </tr>
+                                <tr><td> 6 </td> <td> Year 2</td> <td> Key Stage 1 </td></tr>
+                                <tr><td> 7  </td> <td> Year 3</td> <td> Key Stage 2 </td></tr>
+                                <tr><td> 8  </td> <td> Year 4</td> <td> Key Stage 2 </td></tr>
+                                <tr><td> 9  </td> <td> Year 5</td> <td> Key Stage 2 </td></tr>
+                                <tr><td> 10  </td> <td> Year 6</td> <td> Key Stage 2 </td></tr>
+                                <tr><td> 11  </td> <td> Year 7</td> <td> Key Stage 3 </td></tr>
+                                <tr><td> 12  </td> <td> Year 8</td> <td> Key Stage 3 </td></tr>
+                                <tr><td> 13  </td> <td> Year 9</td> <td> Key Stage 3 </td></tr>
+                                <tr><td> 14  </td> <td> Year 10</td> <td> Key Stage 4 </td></tr>
+                                <tr><td> 15  </td> <td> Year 11</td> <td> Key Stage 4 </td></tr>
+                                <tr><td> 16  </td> <td> Year 12</td> <td> Key Stage 5 </td></tr>
+                                <tr><td> 17  </td> <td> Year 13</td> <td> Key Stage 5 </td></tr>
+
+
+                              </table>
+                            </div>
                             <br><br>
                             <strong>Language</strong>
 
