--- a/index.html
+++ b/index.html
@@ -146,15 +146,15 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
     <!--    SliDER-->
     <div class="bxslider">
-        <div><img src="images/rolling/2_web.jpg" title="Summer carnival"></div>
-        <div><img src="images/rolling/3_web.jpg" title="Learning stations"></div>
-        <div><img src="images/rolling/4_web.JPG" title="Playing outdoors"></div>
-        <div><img src="images/rolling/5_web.jpg" title="Summer carnival"></div>
-        <div><img src="images/rolling/6_web.jpg" title="Learning stations"></div>
-        <div><img src="images/rolling/7_web.jpg" title="Playing outdoors"></div>
-        <div><img src="images/rolling/8_web.jpg" title="Summer carnival"></div>
-        <div><img src="images/rolling/9_web.jpg" title="Learning stations"></div>
-        <div><img src="images/rolling/10_web.jpg" title="Learning stations"></div>
+        <div><img src="images/rolling/2_web.jpg" ></div>
+        <div><img src="images/rolling/3_web.jpg" ></div>
+        <div><img src="images/rolling/4_web.JPG" ></div>
+        <div><img src="images/rolling/5_web.jpg" ></div>
+        <div><img src="images/rolling/6_web.jpg" "></div>
+        <div><img src="images/rolling/7_web.jpg" "></div>
+        <div><img src="images/rolling/8_web.jpg" "></div>
+        <div><img src="images/rolling/9_web.jpg" "></div>
+        <div><img src="images/rolling/10_web.jpg""></div>
     </div>
 
     <!-- //SLIDER   -->
